<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    android:id="@+id/login_layout"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_new_instruo_logo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/instruo_name"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="148dp"
        android:layout_height="26dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/instruo_edition"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="335dp"
        android:layout_height="25dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/instruo_legacy"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc"
        app:layout_constraintVertical_bias="0.059" />

<!--    <Button-->
<!--        android:id="@+id/gSignIn"-->
<!--        android:layout_width="245dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:background="@drawable/buttonstyle"-->
<!--        android:onClick="onClick"-->
<!--        android:drawableLeft="@drawable/googleg_standard_color_18"-->
<!--        android:fontFamily="@font/nunito_regular"-->
<!--        android:gravity="center"-->
<!--        android:text="Sign In with Google"-->
<!--        android:textColor="#ffffff"-->
<!--        android:textSize="16sp"-->
<!--        android:paddingLeft="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.503"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/desc2"-->
<!--        app:layout_constraintVertical_bias="0.587" />-->

    <Button
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/buttonstyle"
        android:fontFamily="@font/nunito_regular"
        android:text="Register"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc2" />

    <Button
        android:id="@+id/Login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonstyle"
        android:fontFamily="@font/nunito_regular"
        android:onClick="showPopUp"
        android:text="Login"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc2" />

    <TextView
        android:id="@+id/skipLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:fontFamily="@font/nunito_regular"
        android:onClick="skipLogin"
        android:text="@string/skiplogin"
        android:textColor="#1871ba"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>