<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragments.HomeFragment"
    android:id="@+id/home_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_image_view_anim"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient_animation"
            android:padding="40dp"
            android:src="@drawable/ic_new_instruo_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_textview_tagline"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/buttonstyle_new"
            android:fontFamily="@font/mavenpro_bold"
            android:gravity="center"
            android:padding="10dp"
            android:shadowColor="@color/background_white"
            android:text="@string/instruo_tagline"
            android:textColor="@color/background_white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_image_view_anim" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="3dp">


    <ImageButton
        android:id="@+id/home_button_technical"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="gotoEvents"

        android:adjustViewBounds="true"
        android:layout_marginEnd="20dp"
        android:foreground="?android:attr/selectableItemBackground"


        android:scaleType="centerCrop"
        android:src="@drawable/technical_block"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="226dp" />

    <ImageButton
        android:id="@+id/home_button_nontechnical"

        android:layout_width="150dp"
        android:layout_height="150dp"

        android:onClick="gotoEvents"

        android:foreground="?android:attr/selectableItemBackground"


        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/non_exclusive_block"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="226dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        android:padding="5dp">



    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/home_button_gaming"
        android:onClick="gotoEvents"


        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:layout_marginEnd="20dp"
        android:foreground="?android:attr/selectableItemBackground"


        android:scaleType="centerCrop"
        android:src="@drawable/gaming_block"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="401dp" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:onClick="gotoEvents"

        android:id="@+id/home_button_automaton"

        android:foreground="?android:attr/selectableItemBackground"


        android:scaleType="centerCrop"
        android:src="@drawable/automaton_block"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="401dp" />

    </LinearLayout>

       <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

           <ImageView
               android:id="@+id/imageView2"
               android:layout_width="match_parent"
               android:layout_height="110dp"
               android:layout_marginTop="50dp"
               android:background="@drawable/gradient_color"
               android:padding="40dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/home_textview_taglin"
               android:layout_width="360dp"
               android:layout_height="wrap_content"
               android:layout_alignParentBottom="true"
               android:layout_marginTop="16dp"
               android:background="@drawable/buttonstyle_new"
               android:fontFamily="@font/mavenpro_bold"
               android:gravity="center"
               android:paddingStart="20dp"
               android:paddingEnd="20dp"
               android:paddingTop="10dp"
               android:paddingBottom="10dp"
               android:shadowColor="@color/background_white"
               android:text="@string/college_name"
               android:textColor="@color/background_white"
               android:textSize="16sp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.49"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.054" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentBottom="true"
               android:fontFamily="@font/mavenpro_bold"
               android:gravity="start"
               android:padding="5dp"
               android:shadowColor="@color/background_white"
               android:text="Reach Us:-"
               android:textColor="@color/background_white"
               android:textSize="13sp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.658" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentBottom="true"
               android:layout_marginStart="24dp"
               android:layout_marginBottom="16dp"
               android:autoLink="web"
               android:fontFamily="@font/mavenpro_bold"
               android:gravity="start"
               android:padding="5dp"
               android:shadowColor="@color/background_white"
               android:text="@string/instruo_website"
               android:textColor="@color/background_white"
               android:textSize="12sp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentBottom="true"
               android:layout_marginBottom="4dp"
               android:fontFamily="@font/mavenpro_bold"
               android:gravity="start"
               android:padding="5dp"
               android:shadowColor="@color/background_white"
               android:text="@string/college_address"
               android:textColor="@color/background_white"
               android:textSize="10sp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>